OpStat and equality features

--- a/static-estimation-pass/static-estimation/CMakeLists.txt
+++ b/static-estimation-pass/static-estimation/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(StaticEstimation MODULE
     # List your source files here.
     lib/StaticEstimation.cpp
     lib/FeatureExtractor.cpp
+    lib/OpStatCounter.cpp
 )
 
 include_directories(include)
